spade-tests/src/snapshots/spade_tests__parser__missing_argument_list_for_inst_method_works.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> bool {
    a.inst b
}

error: Expected argument list
  ┌─ testinput:2:7
  │
2 │     a.inst b
  │       ^^^^^^ Expected argument list for this instantiation
  │
  = Consider specifying positional arguments
  │
2 │     a.inst b(...)
  │             +++++
  = or named arguments
  │
2 │     a.inst b$(...)
  │             ++++++


