spade-tests/src/snapshots/spade_tests__parser__missing_pipeline_depth_parens_is_an_error.snap
---
source: spade-tests/src/parser.rs
---
pipeline a(clk: clock) -> bool {
    true
}

error: Unexpected `identifier`, expected `(`
  ┌─ testinput:1:10
  │
1 │ pipeline a(clk: clock) -> bool {
  │          ^ expected `(`
