spade-tests/src/snapshots/spade_tests__parser__multi_linemissing_semicolon_error_points_to_correct_token.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let a = 1
    true
}


error: Expected `;`, got `true`
  ┌─ testinput:3:5
  │
3 │     true
  │     ^^^^ Expected `;`
  │
  = You probably forgot to end this statement with a `;`
  │
2 │     let a = 1;
  │              +

error: Type of expression is not fully known
  ┌─ testinput:2:13
  │
2 │     let a = 1
  │             ^ The type of this expression is not fully known
  │
  = note: Found incomplete type: Number<_>
